# SomeipVideoLib

./: CMakeLists.txt  Client.cpp  ProjectLog.txt  SendLogToShared.sh  build.sh  configure_and_run_client.sh  configure_and_run_server.sh  gitAdd.sh  run_client_local.sh  run_server_local.sh  run_test.sh  service.cpp  testFunctionalities.cpp
Archive/: ClientLib.cpp  ClientLib.h  VideoReadWrite.cpp  VideoReadWrite.h
Archive/config_client/: VideoConfig.json  vsomeip_config.json
Includes/: ClientLib.cpp  ClientLib.h  ServiceLib.cpp  ServiceLib.h  TestFunctions.cpp  VideoData.pb.cc  VideoData.pb.h  VideoReadWrite.cpp  VideoReadWrite.h
Includes/Someiplib/: ClientLib.cpp  ClientLib.h  ServiceLib.cpp  ServiceLib.h
Includes/Videolib/: ObjectData.pb.cc  ObjectData.pb.h  ObjectData.proto  VideoData.proto  VideoReadWrite.cpp  VideoReadWrite.h
Project_Logs/20231024/client/: ConsoleOutput.txt
Project_Logs/20231024/server/: ConsoleOutput.txt
Project_Logs/20231216/: ProjectLog.txt
Project_Logs/20231224/: ProjectLog.txt
Project_Logs/20240110/: ProjectLog.txt
Project_Logs/20240110/Console_outputs/client/: ConsoleOutput.txt
Project_Logs/20240110/Console_outputs/server/: ConsoleOutput.txt
Project_Logs/20240111/: ProjectLog.txt
Project_Logs/20240111/Console_outputs/client/: ConsoleOutput.txt
Project_Logs/20240111/Console_outputs/server/: ConsoleOutput.txt
TCP/client/: vsomeip_config.json
TCP/server/: vsomeip_config.json
config_Test/: VideoConfig.json  vsomeip_config.json
config_server/: ObjectDetectionConfig.json  VideoConfig.json
